overflow issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@
 }
 
 body {
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden !important;
   min-height: 100vh;
   font-family: "Raleway", Poppins;
-  overflow-x: hidden !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
